--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -1,6 +1,9 @@
-name: CMake
+name: Release Build
 
-on: [push]
+on:
+    push:
+        branches:
+            - master
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
