--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -47,8 +47,14 @@ jobs:
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest -C $BUILD_TYPE
+
+    - name: Echo Hello World
+      working-directory: ${{runner.workspace}}
+      shell: bash
+      run: echo Hello World
+
     - name: Upload compilied binary
-        uses: actions/upload-artifact@v2
-        with:
-          name: build
-          path: /home/runner/work/CI-test/build/CI-test
+      uses: actions/upload-artifact@v2
+      with:
+          name: Binary
+          path: ${{runner.workspace}}/build/CI-test
